--- a/package.json
+++ b/package.json
@@ -1,20 +1,14 @@
 {
   "name": "@aiolimp/vite-plugin-mock",
-  "version": "0.1.0",
+  "version": "1.1.1",
   "description": "A simple mock plugin for Vite",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
-  "author": "aiolimp",
-  "license": "MIT",
-  "keywords": [
-    "vite",
-    "plugin",
-    "mock",
-    "vite-plugin"
-  ],
   "exports": {
     ".": {
       "import": "./dist/index.js",
+      "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts"
     }
   },
