--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "@aiolimp/vite-plugin-mock",
-  "version": "1.1.1",
-  "description": "A simple mock plugin for Vite",
-  "main": "dist/index.cjs",
-  "module": "dist/index.js",
+  "version": "1.1.2",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs",
       "types": "./dist/index.d.ts"
     }
   },
